--- a/.github/workflows/dockerimage.yaml
+++ b/.github/workflows/dockerimage.yaml
@@ -6,21 +6,36 @@ on:
       - demo
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
 
-    - name: Docker Login
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-    
-    - name: Build the Docker image
-      run: docker build -t smitalipatekar/nodeappdemo .
-    
-    - name: Push the Docker image to Docker Hub
-      run: docker push smitalipatekar/nodeappdemo
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set env
+        run: echo "GITHUB_BRANCH=$(echo $GITHUB_REF_NAME-$GITHUB_SHA)" >> $GITHUB_ENV
+
+      - name: Docker Login
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build the Docker image
+        run: docker build -t smitalipatekar/nodeappdemo:$GITHUB_REF_NAME-$GITHUB_SHA .
+
+      - name: Push the Docker image to Docker Hub
+        run: docker push smitalipatekar/nodeappdemo:$GITHUB_REF_NAME-$GITHUB_SHA
+
+      - name: Update deployment file in Gitops repository
+        run: |
+          git clone https://${{ secrets.GCP_GITHUB_USERNAME }}:${{ secrets.GCP_GITHUB_TOKEN }}@github.com/smitalipatekarwohlig/gitops.git 
+          cd gitops
+          git checkout main
+          git config --global user.name ${{secrets.GCP_GITHUB_USERNAME}}
+          git config --global user.email ${{secrets.GCP_GITHUB_EMAIL}}
+          yq e '.spec.template.spec.containers[0].image = "smitalipatekar/nodeappdemo:${{ env.GITHUB_BRANCH }}"' -i deployment.yaml
+          git add .
+          git commit -m "updating newer image"
+          git push origin main
