--- a/.github/workflows/dockerimage.yaml
+++ b/.github/workflows/dockerimage.yaml
@@ -16,17 +16,30 @@ jobs:
       - name: Set env
         run: echo "GITHUB_BRANCH=$(echo $GITHUB_REF_NAME-$GITHUB_SHA)" >> $GITHUB_ENV
 
-      - name: Docker Login
-        uses: docker/login-action@v1
+      # - name: Docker Login
+      #   uses: docker/login-action@v1
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Authenticate to Google Cloud using workload identity federation
+      - id: "auth"
+        name: "Obtain access token by using workload identity federation"
+        uses: "google-github-actions/auth@v2"
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          create_credentials_file: true
+          token_format: access_token
+          workload_identity_provider: projects/${{ secrets.GCP_PROJECT_NUMBER }}/locations/global/workloadIdentityPools/demo-identity-pool/providers/github-actions
+          service_account: github-actions@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
+
+      - name: Connect to Artifact Registry
+        run: echo ${{ steps.auth.outputs.access_token }} | docker login -u oauth2accesstoken --password-stdin ${{secrets.GCP_GAR_HOST}}
 
       - name: Build the Docker image
-        run: docker build -t smitalipatekar/nodeappdemo:$GITHUB_REF_NAME-$GITHUB_SHA .
+        run: docker build -t ${{secrets.GCP_GAR_HOST}}/${{ secrets.GCP_PROJECT_ID }}/${{secrets.GCP_REPO}}/smitalipatekar/nodeappdemo:$GITHUB_REF_NAME-$GITHUB_SHA .
 
       - name: Push the Docker image to Docker Hub
-        run: docker push smitalipatekar/nodeappdemo:$GITHUB_REF_NAME-$GITHUB_SHA
+        run: docker push ${{secrets.GCP_GAR_HOST}}/${{ secrets.GCP_PROJECT_ID }}/${{secrets.GCP_REPO}}/smitalipatekar/nodeappdemo:$GITHUB_REF_NAME-$GITHUB_SHA
 
       - name: Update deployment file in Gitops repository
         run: |
