--- a/.github/workflows/dockerimage.yaml
+++ b/.github/workflows/dockerimage.yaml
@@ -27,14 +27,14 @@ jobs:
       #     password: ${{ secrets.DOCKER_PASSWORD }}
 
       # Authenticate to Google Cloud using workload identity federation
-      # - id: "auth"
-      #   name: "Obtain access token by using workload identity federation"
-      #   uses: "google-github-actions/auth@v2"
-      #   with:
-      #     create_credentials_file: true
-      #     token_format: access_token
-      #     workload_identity_provider: projects/${{ secrets.GCP_PROJECT_NUMBER }}/locations/global/workloadIdentityPools/demo-identity-pool/providers/github-actions
-      #     service_account: github-actions@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
+      - id: "auth"
+        name: "Obtain access token by using workload identity federation"
+        uses: "google-github-actions/auth@v2"
+        with:
+          create_credentials_file: true
+          token_format: access_token
+          workload_identity_provider: projects/${{ secrets.GCP_PROJECT_NUMBER }}/locations/global/workloadIdentityPools/demo-identity-pool/providers/github-actions
+          service_account: github-actions@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
 
       # - name: Connect to Artifact Registry
       #   run: echo ${{ steps.auth.outputs.access_token }} | docker login -u oauth2accesstoken --password-stdin ${{secrets.GCP_GAR_HOST}}
