--- a/.github/workflows/dockerimage.yaml
+++ b/.github/workflows/dockerimage.yaml
@@ -52,7 +52,7 @@ jobs:
           git checkout main
           git config --global user.name ${{secrets.GCP_GITHUB_USERNAME}}
           git config --global user.email ${{secrets.GCP_GITHUB_EMAIL}}
-          yq e '.spec.template.spec.containers[0].image = "smitalipatekar/nodeappdemo:${{ env.GITHUB_BRANCH }}"' -i deployment.yaml
+          yq e '.spec.template.spec.containers[0].image = "${{secrets.GCP_GAR_HOST}}/${{ secrets.GCP_PROJECT_ID }}/${{secrets.GCP_REPO}}/smitalipatekar/nodeappdemo:${{ env.GITHUB_BRANCH }}"' -i deployment.yaml
           git add .
           git commit -m "updating newer image"
           git push origin main
